# motive

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
scripts/: docker-build.sh
src/: lib.rs  macros.rs  main.rs  result.rs
src/commands/: init.rs  mod.rs
src/lua/: mod.rs
src/lua/parser/: entry.rs  lexer.rs  mod.rs  token.rs
src/watch/: error.rs  mod.rs
