[package]
name = "motive"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide = {git = "https://github.com/wess/oxide.git", branch = "master"}
mlua_derive = "0.6.0"
colored = "2.0.0"
regex = "1.5.4"
notify = "4.0.17"
serde_json = "1.0.79"
logos = "0.12.0"
text-size = "1.1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
strum = "0.23.0"
strum_macros = "0.23.1"
tokio-stream = "0.1.8"
glob = "0.3.0"
futures = "0.3.21"
clearscreen = "1.0.9"
async-recursion = "1.0.0"

[dependencies.ctrlc] 
version = "3.2.1"
features = ["termination"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.tokio-serde]
version = "0.8.0"
features = ["json"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[dependencies.clap]
version = "3.0.14"
features = ["derive"]

[dependencies.serde] 
version = "1.0.136"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.mlua]
version = "0.7.3"
features = ["lua54", "vendored", "serialize", "async", "macros"]
